--- a/repos.yml
+++ b/repos.yml
@@ -74,6 +74,9 @@ merged:
   - name: simplabs/ember-simple-auth
     branch:
     pr: 1346
+  - name: tensorflow/tensorflow
+    branch:
+    pr: 10057
 notodo:
   - name: johnsundell/wrap
     branch:
